# mello

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierrc.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-APACHE  LICENSING.md  Makefile  NOTICE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: analytics-cron.yml  ci.yml  deploy-api.yml  deploy-web.yml  release-cli.yml
apps/api/: .env.example  Dockerfile  fly.toml  package.json  tsconfig.json
apps/api/migrations/: 0001_init.sql  0002_drop_password_auth.sql
apps/api/src/: env.ts  index.ts
apps/cli/: Cargo.toml  LICENSE  README.md
apps/cli/src/: auth.rs  config.rs  errors.rs  main.rs  manifest.rs  pack.rs  registry.rs
apps/cli/src/commands/: init.rs  login.rs  logout.rs  mod.rs  owners.rs  publish.rs  validate.rs  whoami.rs  yank.rs
apps/cli/tests/: help.rs
apps/web/: .env.example  package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/web/src/: app.html
apps/web/static/: install.sh
docs/: api-reference.md  bootstrap.md  cli-reference.md  publisher-guide.md
infra/: README.md  compose.dev.yml
infra/scripts/: README.md  analytics-batch.ts
infra/terraform/: .gitignore  README.md  cloudflare.tf  fly.tf  outputs.tf  providers.tf  variables.tf  versions.tf
infra/terraform/env/: prod.tfvars.example
infra/workers/cdn-analytics/: package.json  (+2 more)
spec/: README.md  mello-package-v1.schema.json
spec/pasmello-manifests/: PINNED_VERSION  theme.schema.json  tool.schema.json  workflow.schema.json
(+47 files in other folders)
