[package]
name = "mello"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
description = "CLI for the mello package registry (registry.pasmello.com)"
repository = "https://github.com/pasmello/mello"
homepage = "https://market.pasmello.com"
readme = "README.md"

[[bin]]
name = "mello"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
glob = "0.3"
dirs = "5"
toml = "0.8"
jsonschema = "0.18"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }
open = "5"
url = "2"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
